--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,6 +43,6 @@
           uses: docker/build-push-action@v4
           with:
             context: .
-            dockerfile: Dockerfile
+            file: Dockerfile
             push: true
             tags: ${{ secrets.DOCKER_HUB_USERNAME }}/hello-api:latest
