--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,40 +6,32 @@
 
   jobs:
     build-deploy:
-      name: build and deploy spring-api
+      name: Build and Deploy Spring Boot API
       runs-on: ubuntu-latest
       steps:
-        - name: checkout code
+        - name: Checkout repository
           uses: actions/checkout@v3
 
-        - name: setup jdk 17
+        - name: Setup JDK 17
           uses: actions/setup-java@v3
           with:
-            distribution: 'corretto'
             java-version: 17
 
-        - name: unit tests
+        - name: Run unit tests
           run: mvn -B test --file pom.xml
           
-        - name: build the app
+        - name: Build the app
           run: |
             mvn clean
             mvn -B package --file pom.xml
-        - name: build the docker image
-          uses: docker/build-push-action@v4
-          with:
-            context: .
-            file: Dockerfile
-            push: false
-            tags: ${{ secrets.DOCKER_HUB_USERNAME }}/hello-api:latest
-
-        - name: login to docker hub
+            
+        - name: Login to Docker Hub
           uses: docker/login-action@v1
           with:
             username: ${{ secrets.DOCKER_HUB_USERNAME }}
-            password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-
-        - name: push the docker image to docker hub
+            password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}            
+          
+        - name: Build and Push the docker image
           uses: docker/build-push-action@v4
           with:
             context: .
