--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,7 @@
           uses: actions/setup-java@v3
           with:
             java-version: 17
+            distribution: 'temurin'
 
         - name: Run unit tests
           run: mvn -B test --file pom.xml
