--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,8 @@
   name: Build and Deploy
+  env:
+    USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
+    PASSWORD: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+  
   on:
     workflow_dispatch:
       branches:
@@ -27,13 +31,13 @@
             mvn -B package --file pom.xml
             
         - name: Login to Docker Hub
-          uses: docker/login-action@v1
+          uses: docker/login-action@v3.0.0
           with:
-            username: ${{ secrets.DOCKER_HUB_USERNAME }}
-            password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}            
+            username: ${{ env.USERNAME }}
+            password: ${{ env.PASSWORD }}            
           
         - name: Build and Push the docker image
-          uses: docker/build-push-action@v4
+          uses: docker/build-push-action@v5.1.0
           with:
             context: .
             file: Dockerfile
