--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,11 @@
   jobs:
     build-deploy:
       name: Build and Deploy Spring Boot API
-      runs-on: ubuntu-latest    
+      runs-on: ubuntu-latest
+      environment: dev
+      env:
+        USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
+        PASSWORD: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
       steps:
         - name: Checkout repository
           uses: actions/checkout@v4
