--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@
         - main
 
   jobs:
-    build-deploy:
+    build:
       name: Build and Deploy Spring Boot API
       runs-on: ubuntu-latest
       env:
@@ -25,25 +25,47 @@
           with:
             java-version: 17
             distribution: 'temurin'
+            cache: maven
 
         - name: Run unit tests
           run: mvn -B test --file pom.xml
           
-        - name: Build the app
+        - name: Build with Maven
           run: |
             mvn clean
             mvn -B package --file pom.xml
+            mkdir artifacts && cp target/*.jar artifacts
+            cd artifacts && ls
+            
+        - name: Save artifact
+          uses: actions/upload-artifact@v2
+          with:
+            name: github-action-artifact
+            path: artifacts
             
         - name: Login to Docker Hub
           uses: docker/login-action@v3
           with:
             username: ${{ env.USERNAME }}
             password: ${{ env.PASSWORD }}            
+
+        - name: Set up Docker Buildx
+          uses: docker/setup-buildx-action@v3
           
         - name: Build and Push the docker image
-          uses: docker/build-push-action@v5.1.0
+          uses: docker/build-push-action@v5
           with:
             context: .
             file: Dockerfile
             push: true
-            tags: ${{ secrets.DOCKER_HUB_USERNAME }}/hello-api:latest
+            tags: ${{ env.USERNAME }}/hello-api:latest
+	deploy:
+	  needs: build
+      runs-on: [aws-ec2]
+      steps:
+        - name: Pull Image from docker hub
+          run: sudo docker pull dockkrbabu/hello-api:latest
+        - name: Delete old container
+          run: sudo docker rm -f spring-boot-app-container
+        - name: Run Docker Image
+          run: sudo docker run -d -p 8080:8080 --name spring-boot-app-container dockkrbabu/hello-api:latest
