--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,12 +5,19 @@ name: Spring Boot CI with Maven
 
 on:
   workflow_dispatch:
-    branches: [ "main" ]
+    inputs:
+      imageName:
+        description: 'Name of the image'
+        required: true
+        type: string
+      environment:
+        description: 'Environment to run tests against'
+        type: environment
+        required: true
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
 
 jobs:
   build:
@@ -18,9 +25,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Set up JDK 17
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
@@ -31,15 +38,15 @@ jobs:
            mkdir artifacts && cp target/*.jar artifacts
            cd artifacts && ls
     - name: Save artifact
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v4
       with:
         name: github-action-artifact
         path: artifacts
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
     - name: Build and push
@@ -48,13 +55,13 @@ jobs:
         context: .
         file: ./Dockerfile
         push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/spring-boot-github-action-demo:latest
+        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/spring-boot-github-action-demo:latest
   deploy:
     needs: build
     runs-on: [aws-ec2]
     steps:
       - name: Pull Image from docker hub
-        run: sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/spring-boot-github-action-demo:latest
+        run: sudo docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/spring-boot-github-action-demo:latest
       - name: Delete old container
         run: sudo docker rm -f spring-boot-app-container
       - name: Run Docker Image
